gccida/g2/instantiate_virtual_regs_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4253:6: error: use of undeclared identifier 'fld'; did you mean 'fold'?
rtx *fld; // r14 
     ^~~
     fold
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4253:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'tree (tree)' (aka 'union tree_node *(union tree_node *)'))
rtx *fld; // r14 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4260:6: error: use of undeclared identifier 'v14'
rtx *v14; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4266:4: error: expected ';' after expression
rtx v20; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4266:5: error: use of undeclared identifier 'v20'
rtx v20; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4269:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4269:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4270:4: error: expected ';' after expression
rtx v24; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4270:5: error: use of undeclared identifier 'v24'
rtx v24; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4277:4: error: expected ';' after expression
rtx v31; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4277:5: error: use of undeclared identifier 'v31'
rtx v31; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4292:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4292:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4300:4: error: expected ';' after expression
rtx old; // [rsp+0h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4300:5: error: use of undeclared identifier 'old'; did you mean 'fold'?
rtx old; // [rsp+0h] [rbp-58h] 
    ^~~
    fold
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4303:4: error: expected ';' after expression
rtx src; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4303:5: error: use of undeclared identifier 'src'
rtx src; // [rsp+18h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4309:1: error: use of undeclared identifier 'fld'
fld = loc; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/function.c:4343:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int16 *)rtx[1]; 
                  ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/instantiate_virtual_regs_1/src/obj/function.o] Error 1
